@@ -69,6 +69,7 @@
     <File name="./Banter/HIGMessageDialog.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/StatusEntry.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/AvatarSelector.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Banter/AvatarMenuItem.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
